--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
       - image: lowieh/docker-python-gcp:3.4
     steps:
       - checkout
+#     Test edmunds in python 3.4
       - restore_cache:
           key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
@@ -74,6 +75,30 @@ jobs:
           command: |
             . venv/bin/activate
             coverage run --source=edmunds setup.py test
+#     Test edmunds-instance in python 3.4
+      - run:
+          command: |
+            git submodule sync
+            git submodule update --init --recursive
+      - restore_cache:
+          key: deps-instance-test-3.4-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
+      - run:
+          command: |
+            cd edmunds-instance
+            python -m venv venv
+            . venv/bin/activate
+            pip install setuptools_scm
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps-instance-test-3.4-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
+          paths:
+            - "edmunds-instance/venv"
+      - run:
+          command: |
+            cd edmunds-instance
+            . venv/bin/activate
+            python manage.py test
+#     Send results to codecov in python 3.4
       - run:
           command: |
             . venv/bin/activate
@@ -84,6 +109,7 @@ jobs:
       - image: lowieh/docker-python-gcp:3.5
     steps:
       - checkout
+#     Test edmunds in python 3.5
       - restore_cache:
           key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
@@ -100,6 +126,30 @@ jobs:
           command: |
             . venv/bin/activate
             coverage run --source=edmunds setup.py test
+#     Test edmunds-instance in python 3.5
+      - run:
+          command: |
+            git submodule sync
+            git submodule update --init --recursive
+      - restore_cache:
+          key: deps-instance-test-3.5-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
+      - run:
+          command: |
+            cd edmunds-instance
+            python -m venv venv
+            . venv/bin/activate
+            pip install setuptools_scm
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps-instance-test-3.5-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
+          paths:
+            - "edmunds-instance/venv"
+      - run:
+          command: |
+            cd edmunds-instance
+            . venv/bin/activate
+            python manage.py test
+#     Send results to codecov in python 3.5
       - run:
           command: |
             . venv/bin/activate
@@ -110,6 +160,7 @@ jobs:
       - image: lowieh/docker-python-gcp:3.6
     steps:
       - checkout
+#     Test edmunds in python 3.6
       - restore_cache:
           key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
@@ -128,6 +179,32 @@ jobs:
           command: |
             . venv/bin/activate
             coverage run --source=edmunds setup.py test
+#     Test edmunds-instance in python 3.6
+      - run:
+          command: |
+            git submodule sync
+            git submodule update --init --recursive
+      - restore_cache:
+          key: deps-instance-test-3.6-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
+      - run:
+          command: |
+            cd edmunds-instance
+            python -m venv venv
+            . venv/bin/activate
+            # Update setuptools to avoid this issue: https://github.com/linsomniac/python-memcached/issues/103
+            pip install -U setuptools
+            pip install setuptools_scm
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps-instance-test-3.6-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
+          paths:
+            - "edmunds-instance/venv"
+      - run:
+          command: |
+            cd edmunds-instance
+            . venv/bin/activate
+            python manage.py test
+#     Send results to codecov in python 3.6
       - run:
           command: |
             . venv/bin/activate
