--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             python -m virtualenv venv
             . venv/bin/activate
-            pip install codecov setuptools_scm
+            pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
           key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -52,7 +52,7 @@ jobs:
           command: |
             python -m venv venv
             . venv/bin/activate
-            pip install codecov setuptools_scm
+            pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
           key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -90,7 +90,7 @@ jobs:
           command: |
             python -m venv venv
             . venv/bin/activate
-            pip install codecov setuptools_scm
+            pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
           key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -130,7 +130,7 @@ jobs:
             . venv/bin/activate
             # Update setuptools to avoid this issue: https://github.com/linsomniac/python-memcached/issues/103
             pip install -U setuptools
-            pip install codecov setuptools_scm
+            pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
           key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
