--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
 #     Test edmunds in python 2.7
       - restore_cache:
-          key: deps-v2-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
             python -m virtualenv venv
@@ -17,7 +17,7 @@ jobs:
             pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
-          key: deps-v2-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - venv
       - run:
@@ -47,7 +47,7 @@ jobs:
       - checkout
 #     Test edmunds in python 3.4
       - restore_cache:
-          key: deps-v2-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
             python -m venv venv
@@ -55,7 +55,7 @@ jobs:
             pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
-          key: deps-v2-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - venv
       - run:
@@ -85,7 +85,7 @@ jobs:
       - checkout
 #     Test edmunds in python 3.5
       - restore_cache:
-          key: deps-v2-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
             python -m venv venv
@@ -93,7 +93,7 @@ jobs:
             pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
-          key: deps-v2-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - venv
       - run:
@@ -123,7 +123,7 @@ jobs:
       - checkout
 #     Test edmunds in python 3.6
       - restore_cache:
-          key: deps-v2-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
             python -m venv venv
@@ -133,7 +133,7 @@ jobs:
             pip install codecov coverage setuptools_scm
             pip install -r requirements.txt
       - save_cache:
-          key: deps-v2-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - venv
       - run:
